added scoreboard component

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-.board {
+.cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 100px);
   gap: 4px;
 }
 
