--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,18 @@
 .cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 100px);
   gap: 4px;
 }
 
 .card {
-  background-color: grey;
+  background-color: black;
   text-align: center;
-  padding: 20px;
+  padding: 4px;
+  border-radius: 8px;
+  color: white;
+}
+
+img {
+  max-width: 100%;
+  border-radius: 4px;
 }
