--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 4px;
+  padding: 8px;
 }
 
 .card {
@@ -15,4 +16,11 @@
 img {
   max-width: 100%;
   border-radius: 4px;
+}
+
+h1,
+h2,
+.score {
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
